--- a/manifest.json
+++ b/manifest.json
@@ -81,7 +81,8 @@
     "vtex.seller-selector": "0.x",
     "vtex.store-newsletter": "1.x",
     "vtex.b2b-organizations": "1.x",
-    "vtex.category-menu": "2.x"
+    "vtex.category-menu": "2.x",
+    "vtex.overlay-layout": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
