feat: b2b widget improvements and new component add-all-to-cart-button for sku-list

--- a/manifest.json
+++ b/manifest.json
@@ -82,7 +82,8 @@
     "vtex.store-newsletter": "1.x",
     "vtex.b2b-organizations": "1.x",
     "vtex.category-menu": "2.x",
-    "vtex.overlay-layout": "0.x"
+    "vtex.overlay-layout": "0.x",
+    "ssesandbox04.add-all-to-cart-button": "2.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
