--- a/manifest.json
+++ b/manifest.json
@@ -76,14 +76,13 @@
     "vtex.disclosure-layout": "1.x",
     "vtex.modal": "0.x",
     "vtex.store-form": "0.x",
-    "vtex.sku-list": "1.x",
     "vtex.condition-layout": "2.x",
     "vtex.seller-selector": "0.x",
     "vtex.store-newsletter": "1.x",
     "vtex.b2b-organizations": "1.x",
     "vtex.category-menu": "2.x",
     "vtex.overlay-layout": "0.x",
-    "ssesandbox04.add-all-to-cart-button": "2.x"
+    "ssesandbox04.my-sku-list": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
