--- a/manifest.json
+++ b/manifest.json
@@ -82,7 +82,8 @@
     "vtex.b2b-organizations": "1.x",
     "vtex.category-menu": "2.x",
     "vtex.overlay-layout": "0.x",
-    "ssesandbox04.my-sku-list": "0.x"
+    "ssesandbox04.my-sku-list": "0.x",
+    "ssesandbox04.b2b-last-orders": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
