--- a/store/blocks/challenges.jsonc
+++ b/store/blocks/challenges.jsonc
@@ -1,4 +1,5 @@
 {
+  /* Link de cadastrar organização de acordo com as permissões */
   "check-permission#reseller": {
     "props": {
       "roles": [
@@ -19,6 +20,8 @@
       "blockClass": "resellerChallengeContent"
     }
   },
+
+  /* Overlay trigger do B2B Widget de acordo com as permissões */
   "check-permission#reseller-overlay-trigger": {
     "props": {
       "roles": [
@@ -42,6 +45,8 @@
       "blockClass": "resellerChallengeContent"
     }
   },
+
+  /* B2B Widget de acordo com as permissões */
   "check-permission#reseller-b2b-user-widget": {
     "props": {
       "roles": [
@@ -65,6 +70,8 @@
       "blockClass": "resellerChallengeContent"
     }
   },
+
+  /* Link do quickorder ou cadastrar organização de acordo com as permissões */
   "check-permission#orderQuote": {
     "props": {
       "roles": [
@@ -91,6 +98,8 @@
       "blockClass": "resellerChallengeFallback"
     }
   },
+
+  /* Botão de login/profile de acordo com as permissões */
   "check-permission#login": {
     "props": {
       "roles": [
@@ -118,6 +127,7 @@
     }
   },
 
+  /* Disposição dos links do menu mobile de acordo com as permissões */
   "check-permission#menuLinks": {
     "props": {
       "roles": [
@@ -140,5 +150,26 @@
   },
   "disallowed-content#menuLinksNotLogged": {
     "children": ["slider-layout#menuLinksNotLogged"]
+  },
+
+  /* Disposição dos links do menu mobile de acordo com as permissões */
+  "check-permission#lastOrders": {
+    "props": {
+      "roles": [
+        "store-admin",
+        "sales-admin",
+        "sales-manager",
+        "sales-representative",
+        "customer-admin",
+        "customer-approver",
+        "customer-buyer"
+      ]
+    },
+    "blocks": [
+      "allowed-content#lastOrders"
+    ]
+  },
+  "allowed-content#lastOrders": {
+    "children": ["flex-layout.row#last-orders"]
   }
 }
