--- a/store/blocks/mobile/home.jsonc
+++ b/store/blocks/mobile/home.jsonc
@@ -2,7 +2,9 @@
   "responsive-layout.mobile": {
     "children": [
       "flex-layout.row#imageList--mobile",
+      "check-permission#lastOrders",
       "flex-layout.row#shopByCategory",
+      "__fold__",
       // Deprecated
       // "flex-layout.row#shopByBrandMobile",
       "flex-layout.row#bannerReleases",
@@ -10,10 +12,12 @@
       // "flex-layout.row#shelfMobile",
       // "flex-layout.row#banners",
       "flex-layout.row#popular",
+      "__fold__",
       "flex-layout.row#recommendations",
       "flex-layout.row#bannerCoupon",
       "flex-layout.row#imageBanners",
       // "flex-layout.row#benefits",
+      "__fold__",
       "flex-layout.row#newsletter"
     ]
   },
