fix: correct version of b2b-last-orders

--- a/manifest.json
+++ b/manifest.json
@@ -83,7 +83,7 @@
     "vtex.overlay-layout": "0.x",
     "vtex.storefront-permissions-ui": "1.x",
     "ssesandbox04.my-sku-list": "0.x",
-    "ssesandbox04.b2b-last-orders": "0.x"
+    "ssesandbox04.b2b-last-orders": "0.0.3"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
