feat: improving add all to cart

--- a/store/blocks/product/sku-list.jsonc
+++ b/store/blocks/product/sku-list.jsonc
@@ -119,7 +119,7 @@
       "horizontalAlign": "center",
       "verticalAlign": "middle"
     },
-    "children": ["sku-quantity-selector", "sku-buy-button"]
+    "children": ["sku-quantity-selector"]
   },
 
   // "flex-layout.col#sku-buy-button": {
@@ -170,7 +170,7 @@
       "width": "50%",
       "verticalAlign": "middle"
     },
-    "children": ["sku-quantity-selector", "sku-buy-button"]
+    "children": ["sku-quantity-selector"]
   },
 
   "sku-quantity-selector": {
